# ssf-transmitter

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  codecov.yml  docker-compose.snippet.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: MERGE_MARKER  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml  sync-main-to-beta.yml
app/: __init__.py  alerts.py  auth.py  config.py  crypto.py  database.py  main.py  models.py  rate_limit.py  startup.py
app/events/: __init__.py  mapper.py  pusher.py
app/routes/: __init__.py  apple_scim.py  jwks.py  root.py  streams.py  verification.py  webhook.py  wellknown.py
app/scim/: __init__.py  apple.py  authentik.py  token.py
app/security/: __init__.py  http_logging.py  pii.py  url_validation.py
docs/: API.md  Apple-SCIM-Sync.md  Configuration.md  Deployment.md  Event-Mapping.md  Key-Management.md  README.md  Security-Notes.md  Troubleshooting.md  Upgrading.md  synology-authentik-compose.md
tests/: conftest.py  test_app.py  test_apple_scim_oauth.py  test_auth.py  test_config_security.py  test_database_security.py  test_event_uri_compat.py  test_http_logging.py  test_issuer_discovery.py  test_logging_config.py  test_logging_redaction.py  test_mapper.py  test_pii_and_body_limit.py  test_pusher.py  test_pydantic_validation.py  test_scim_authentik.py  test_scim_users_differ.py  test_security_headers.py  test_set_claims.py  test_startup.py  test_url_validation.py  test_verification_endpoint.py  test_webhook_auth_modes.py  test_webhook_security.py
