[project]
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing --cov-report=xml:coverage.xml"
pythonpath = ["."]
markers = [
    "no_dns_mock: skip the autouse mock_dns_resolve fixture (for tests that set up their own mocks)",
    "enable_rate_limit: keep slowapi enabled for rate-limit behaviour tests",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.deptry]
# DEP003 (transitive dependency used directly) requires full pyproject.toml
# dependency declaration to work correctly — skip it until dependencies are
# migrated from requirements.txt to [project.dependencies].
# DEP001 (missing) and DEP002 (unused) are still enforced.
ignore = ["DEP003"]

[tool.deptry.per_rule_ignores]
# uvicorn is not imported in Python code — it is invoked as a CLI entrypoint
# in the Dockerfile CMD. Deptry cannot detect CLI-only runtime dependencies.
DEP002 = ["uvicorn"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
